--- a/xops_qd/index.html
+++ b/xops_qd/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Xops Admin</title>
+    <title>运维自动化</title>
   </head>
   <body>
     <div id="app"></div>
